<resources>
    <string name="app_name">RPS Stationery</string>
    <string name="todo">todo</string>
    <string name="pay">Pay</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_your_birthday_date">Date of Birth</string>
    <string name="enter_email_address">Email e.g. junej@gmail.com</string>
    <string name="address">Address</string>
    <string name="login">Login</string>
    <string name="ADDRESS_KEY">AddressKey</string>
    <string name="NAME_KEY">NameKey</string>
    <string name="PHONE_KEY">PhoneKey</string>
    <string name="USERNAME_KEY">UsernameKey</string>
    <string name="loading">Loading</string>
    <string name="choose_your_category">Choose your category</string>
    <string name="school_product">School Product</string>
    <string name="office_product">Office Product</string>
    <string name="both">Both</string>
    <string name="get_otp">Get OTP</string>
    <string name="chirag_juneja">Chirag Juneja</string>
    <string name="junejachirag020_gamil_com">junejachirag020@gamil.com</string>
    <string name="search">search</string>
    <string name="open">"drawer is opening"</string>
    <string name="close">\"drawer is closing\"</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="parker_pen_single_piece">Parker Pen single piece</string>
    <string name="productname">Parker Pen single piece</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="_20">20%</string>
    <string name="_2799_00">2799.00</string>
    <string name="_3000">3000</string>
    <string name="price">PRICE:</string>
    <string name="_198">198</string>
    <string name="_100">100%</string>
    <string name="discount">Discount</string>
    <string name="_84_99_inr">84.99 INR</string>
    <string name="quantity">Quantity</string>
    <string name="change_profile_picture">change profile picture</string>
    <string name="admin_dashboard">Admin DashBoard</string>
    <string name="add_products">Add Products</string>
    <string name="product_name">Product Name</string>
    <string name="product_size">Product Size</string>
    <string name="one_pack_quantity">One Pack Quantity</string>
    <string name="product_color">Product Color</string>
    <string name="product_brand">Product Brand</string>
    <string name="mrp">MRP</string>
    <string name="selling_price">Selling Price</string>
    <string name="product_discount">Product Discount</string>
    <string name="order_quantity">Order Quantity</string>
    <string name="product_type">Product Type</string>
    <string name="next">NEXT</string>
    <string name="enter_product_details">Enter Product Details</string>
    <string name="camera">Camera</string>
    <string name="choose">choose</string>
    <string name="get_order_list">get Order List</string>
    <string name="done">Done</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="or_you_can_fill_your_location_from_here">or you can fill your address</string>
    <string name="pincode">pincode</string>
    <string name="house_number_or_building_name">house or building number</string>
    <string name="road_name_area_colony">road name or colony</string>
    <string name="city">city</string>
    <string name="state">state</string>
    <string name="landmark_optional">landmark (optional)</string>
    <string name="save">save</string>
    <string name="google_map_api_key">AIzaSyA6mz0xHnIIh-SSteVt_61ksF1uQyqgXpU</string>
    <string name="product_category">product category</string>
    <string name="shop_now">SHOP NOW</string>
    <string name="swipe_to_pay">SWIPE TO PAY</string>
    <string name="amount_36_inr">Amount : 36 INR( including all taxes.)</string>
    <string name="bisleri_water_bottle">Bisleri Water Bottle</string>
    <string name="quantity_1">Quantity : 1</string>
    <string name="amount_18_inr">Amount : 18 INR</string>
    <string name="item">Item</string>
    <string name="pcs_in_pack">pcs in pack</string>
    <string name="head">Head</string>
    <string name="your_order">Your Order</string>
    <string name="order_date_25th_aug_2020">25th Aug , 2020</string>
    <string name="more">more…</string>
    <string name="set_payment_method">Set Payment Method</string>
    <string name="name">Name:</string>
    <string name="pay_now">PAY NOW</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="choose_address">Choose Address</string>
    <string name="chooseaddress">Choose Address</string>
    <string name="set_payment">Set Payment</string>
    <string name="AddAddress">Add New Address</string>
    <string name="addressdata">Address :</string>
    <string name="_10_digit_phone_number">10 digit Phone number</string>
    <string name="edit_addresses">Edit Addresses</string>
    <string name="share_app">Share App</string>
    <string name="rate_the_app">Rate The App</string>
    <string name="get_help">Get Help</string>
    <string name="call_us">Call Us</string>
    <string name="mail_us">Mail Us</string>
    <string name="my_account">My Account</string>
    <string name="hi_chirag_juneja">HI , Chirag Juneja</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_default_address">Enter your default address</string>
    <string name="address_">Address :</string>
    <string name="near_old_post_office_nnowgaon_alwar_nrajasthan_npin_301025">Near old post office,\nNowgaon , alwar ,\nRajasthan\nPin : 301025</string>
    <string name="_5_bottle_set">5 bottle set</string>
    <string name="order_status_purchased">Order Status : Purchased</string>
    <string name="order_quantity_5_pcs">Order Quantity : 5 pcs.</string>
    <string name="delivery_date_25th_aug_2020">delivery Date : 25th Aug , 2020.</string>
    <string name="order_id_12emccs009945tyt3">Order ID : 12emccs009945tyt3</string>
    <string name="sorry_no_return_process_is_available">sorry no return process is available</string>
    <string name="explore_more">Explore More.</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="apply">Apply</string>
    <string name="products">Products</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_product_type">Choose product Type</string>
    <string name="choose_product_size">Choose product Size</string>
    <string name="choose_product_color">Choose product Color</string>
    <string name="submit">Submit</string>
    <string name="i_agreed_and_read_all_above_term_and_conditions">I agreed and read all above term and conditions.</string>
    <string name="terms_and_conditions_apply">Terms And Conditions Apply</string>
    <string name="show_products">Show Products</string>
    <string name="your_products">Your Products</string>
    <string name="pen_set_5_in_one">Pen Set 5 in one</string>
    <string name="price_34rs">Price : 34rs</string>
    <string name="click_here">click Here</string>
    <string name="rate_product">Rate product</string>
    <string name="average">Average</string>
    <string name="product_name_parker_pen_single_piece">product Name : parker pen single piece</string>
    <string name="enter_your_feedback">Enter Your feedBack..</string>
    <string name="buy_now">buy now</string>
    <string name="product_details">Product Details</string>
    <string name="total_price_2400_inr">Total Price :       2400 INR</string>
    <string name="delivery_charge_40_inr">Delivery Charge :       40 INR</string>
    <string name="discount_price_200_inr">Discount Price :       0 INR</string>
    <string name="total_amount_to_pay_2240_inr">Total Amount to pay : 2240 INR</string>
    <string name="rate_the_product">Rate The Product</string>
    <string name="general_items">General Items</string>
    <string name="school_items">School Items</string>
    <string name="both_type_items">Both Type Items</string>
    <string name="school_and_office_items">School And Office Items</string>
    <string name="office_items">Office Items</string>
    <string name="explore_products">Explore Products</string>
    <string name="total_cost_400_00_inr">Total Cost : 400.00 INR</string>
    <string name="success">Success</string>
    <string name="order_now">Order Now</string>
    <string name="office_stationery">  Office Stationery</string>
    <string name="school_stationery">School Stationery</string>
    <string name="general_stationery">General Stationery</string>
    <string name="order_placed">Order Placed</string>
    <string name="total_savings_0_inr">Total Savings 0 INR</string>
    <string name="go_to_bag">go to bag</string>
</resources>