<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:id="@+id/orderCard"
    app:cardCornerRadius="5dp"
    android:elevation="2dp"
    app:cardBackgroundColor="#4170FF"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/productImage"
                android:alpha="1.0"
                android:contentDescription="@string/todo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="15dp"
                android:src="@drawable/product_image"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/productImage"
                app:layout_constraintLeft_toLeftOf="@id/productImage"
                android:textColor="#000"
                android:layout_marginTop="@dimen/fragment_title_padding_10"
                android:textSize="18sp"
                android:text="@string/address_"
                android:fontFamily="@font/roboto_medium"
                android:id="@+id/addressTag"
                />

            <TextView
                android:id="@+id/address"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/fragment_title_padding_10"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addressTag"
                app:layout_constraintLeft_toLeftOf="@id/addressTag"
                android:textColor="#000"
                android:fontFamily="@font/roboto_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_old_post_office_nnowgaon_alwar_nrajasthan_npin_301025"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="@dimen/fragment_title_padding_10" />

            <TextView
                app:layout_constraintBottom_toBottomOf="@id/productImage"
                android:id="@+id/productName"
                app:layout_constraintRight_toLeftOf="@id/productImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/productImage"
                android:layout_marginStart="@dimen/fragment_title_padding_10"
                android:text="@string/_5_bottle_set"
                android:textColor="#000"
                android:fontFamily="@font/roboto_medium"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/fragment_title_padding_10"
                />

            <TextView
                android:id="@+id/orderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/productName"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/fragment_title_padding_10"
                android:text="@string/order_status_purchased"
                android:textColor="#530101"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/orderStatus"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/fragment_title_padding_10"
                android:text="@string/order_quantity_5_pcs"
                android:textColor="#530101"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/orderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/quantity"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/fragment_title_padding_10"
                android:text="@string/delivery_date_25th_aug_2020"
                android:textColor="#530101"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/orderID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/orderDate"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/fragment_title_padding_10"
                android:text="@string/order_id_12emccs009945tyt3"
                android:textColor="#530101"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/rateBtn"
                app:layout_constraintTop_toBottomOf="@id/orderID"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/fragment_title_padding_10"
                android:text="@string/sorry_no_return_process_is_available"
                android:layout_marginTop="@dimen/fragment_title_padding_10"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                />

            <TextView
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat"
                android:layout_margin="@dimen/fragment_title_padding_10"
                android:textColor="#fff"
                android:background="@drawable/shape4"
                android:text="@string/rate_the_product"
                android:padding="5dp"
                android:id="@+id/rateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/message"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>